# vulnscanner

./: .env.example  .gitignore  .vulnscannerignore  CLAUDE.md  LICENSE  README.md  _register_findings.py  _scan_recall.py  benchmark_python_score.py  custom_taint_sources.json  improvement_loop.py  improvement_report.md  nightly_improvement.py  nightly_task.xml  owasp_score.py  pyproject.toml  python_benchmark_score.py  recall_check.py  requirements.txt  run_improvement.ps1  run_nightly.ps1
.claude/: notify_hook.py  pushover_config.json.example  settings.json
.github/workflows/: ci.yml  vulnscan.yml
disclosures/asu-xss-defence/: 0001-stats-replace-innerHTML-with-DOM-API-in-loadPackages.patch  COMMIT_MESSAGE.txt  PR_DESCRIPTION.md
disclosures/ytdlp2strm-eval-injection/: EMAIL_DRAFT.md  GITHUB_SECURITY_ADVISORY.md  MITRE_CVE_REQUEST.md  SUBMISSION_CHECKLIST.md
docs/: design_doc_crossfile_taint.md  design_doc_interprocedural.md
recall/: README.md
recall/js/: xss.js
recall/php/: sqli.php  xss_1hop.php
recall/python/: deserialization.py  exec_injection.py  path_traversal.py  sql_injection.py
tests/: test_analyzers.py  test_custom_rules.py  test_file_context.py  test_knowledge.py  test_reporters.py  test_taint.py
tests/fixtures/: js_taint_safe.js  js_taint_vuln.js  vulnerable_ast_python.py  vulnerable_cmd.py  vulnerable_nodejs.js  vulnerable_sql.py
vscode-vulnscanner/: extension.js  package.json
vulnscanner/: cli.py  cwe_map.py  models.py  profiler.py  scanner.py  taint.py
vulnscanner/analyzers/: __init__.py  xss.py  (+30 more)
workflows/: github-scan-template.yml
(+61 files in other folders)
