[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscanner"
version = "0.1.0"
description = "Static vulnerability scanner for public GitHub repositories"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.3.0",
    "requests>=2.32.3",
    "click>=8.1.7",
    "rich>=13.7.1",
    "PyYAML>=6.0.2",
    "Jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vulnscan = "vulnscanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vulnscanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
